# personal-information-manager

./: .coveragerc  .env_sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yaml
accounts/migrations/: 0001_initial.py
billing/: admin.py
billing/migrations/: 0001_initial.py  0002_alter_plan_options_subscription.py
billing/models/: plans.py  subscriptions.py
config/: settings.py  urls.py
main/: views.py
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_note_created_at_note_update_at_alter_note_user.py  0003_alter_note_color.py  0004_alter_note_color.py  0005_alter_note_color.py  0006_alter_note_options_rename_update_at_note_modified_at.py  0007_note_slug_alter_note_content.py
pim/accounts/: apps.py  urls.py
pim/appointments/: apps.py  urls.py  views.py
pim/billing/: admin.py  apps.py
pim/contacts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
pim/main/: apps.py  urls.py  views.py
pim/notes/: apps.py  models.py  urls.py  views.py
pim/todos/: admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
static/js/: django-debug-toolbar.js  htmx.min.js  main.js
templates/: base.html  toast.html
templates/account/: email_confirm.html  login.html  logout.html  password_change_done.html  password_reset.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/registration/: login.html
todos/: admin.py  apps.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
todos/migrations/: 0001_initial.py  0002_rename_completed_todo_is_completed.py  0003_todo_created_at_todo_updated_at.py  0005_usertodo.py  (+3 more)
(+75 files in other folders)
