[project]
name = "personal-information-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit[baseline,sarif,toml]>=1.8.6",
    "crispy-bootstrap5>=2025.6",
    "datastar-py>=0.6.5",
    "django>=5.2.6",
    "django-allauth>=65.11.1",
    "django-crispy-forms>=2.4",
    "django-phonenumber-field[phonenumberslite]>=8.1.0",
    "django-rosetta>=0.10.2",
    "django-tinymce>=4.1.0",
    "pillow>=11.3.0",
    "pre-commit>=4.3.0",
    "pycountry>=24.6.1",
    "python-decouple>=3.8",
    "rosetta>=0.3",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.0.0",
    "djlint>=1.36.4",
    "pre-commit>=4.3.0",
    "pytest-django>=4.11.1",
]

[tool.ruff.format]
quote-style = "single"

[tool.djlint]
profile="django"
indent=2
format_css=true
preserve_blank_lines=true
use_gitignore=true
ignore="T002,H030,H031"
max_blank_lines=2
max_line_length=80
